--- a/ApiMongoDB/Properties/launchSettings.json
+++ b/ApiMongoDB/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:57608",
-      "sslPort": 44386
+      "applicationUrl": "http://localhost:2265",
+      "sslPort": 0
     }
   },
   "profiles": {
-    "ApiMongoDB": {
+    "API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7263;http://localhost:5263",
+      "applicationUrl": "http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
