--- a/ApiMongoDB/Properties/launchSettings.json
+++ b/ApiMongoDB/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "API": {
+    "ApiMongoDB": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
