--- a/ApiMongoDB.Auth/appsettings.Development.json
+++ b/ApiMongoDB.Auth/appsettings.Development.json
@@ -6,7 +6,9 @@
     }
   },
   "tokenManagement": {
-    "secret": "batman batman batman"
-  },
-  "AllowedHosts": "*"
+    "secret": "batman batman batman",
+    "issuer": "magno.net",
+    "audience": "everyone",
+    "accessExpiration": 30
+  }
 }
