--- a/ApiMongoDB/ApiMongoDB.csproj
+++ b/ApiMongoDB/ApiMongoDB.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="ImageProcessor" Version="2.9.1" />
 		<PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
 		<PackageReference Include="MongoDB.Bson" Version="2.14.1" />
 		<PackageReference Include="MongoDB.Driver" Version="2.13.2" />
 		<PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
