Implementação de Cache

--- a/ApiMongoDB/appsettings.Development.json
+++ b/ApiMongoDB/appsettings.Development.json
@@ -1,7 +1,10 @@
 {
   "DatabaseSettings": {
-    "ConnectionString":"mongodb://localhost:27017",
-    "DatabaseName":  "db_portal"
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "db_portal"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
